# lnreader

./: .env.local  .eslintrc.js  .gitignore  App.tsx  CONTRIBUTING-NIX.md  CONTRIBUTING.md  DRIZZLE_MIGRATION_SUMMARY.md  TESTING.md  app.json  babel.config.js  crowdin.yml  eas.json  eslint.config.js  index.js  jest.config.js  metro.config.js  opt_mod  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.tsbuildinfo
.github/workflows/: build.yml  lint.yml  testing.yml  types.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
__mocks__/: database.js  nativeModules.js
__tests__/: removeExtraParagraphSpacing.test.ts
android/: gradlew  settings.gradle
android/app/: build.gradle
drizzle/: migrations.js
drizzle/20260523204120_eager_blink/: migration.sql  snapshot.json
drizzle/20260612232322_normal_saracen/: migration.sql  snapshot.json
drizzle/meta/: 0000_snapshot.json  (+1 more)
gradle/: android-build-types.gradle
ios/: Podfile  Podfile.properties.json
modules/nitro-epub/android/: CMakeLists.txt  build.gradle
patches/: @cd-z__react-native-epub-creator.patch  @rock-js__plugin-metro@0.12.12.patch
plugins/: withAndroidCustomizations.js  withNativeEpub.js  withReaderAssets.js
scripts/: generate-string-types.cjs
shared/: Epub.cpp
specs/: NativeBackgroundTasks.ts  NativeFile.ts
strings/: translations.ts
(+584 files in other folders)
